9901
Note that if both are private, it compiles. If both are private[s], it fails, but at least it fails understandably and in a way which can be resolved (though the failure to compile is still a bug if the specification is supposed to have any relevance.)
```
./a.scala:5: error: class Y1 inherits conflicting members:
  value m in trait B1 of type String  and
  value m in trait B2 of type String
(Note: this can be resolved by declaring an override in class Y1.)
class Y1 extends s.B1 with s.B2  // compiles
      ^
```
